--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,17 @@ Flask-Compress==1.10.1
 future==0.18.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
+joblib==1.0.1
 MarkupSafe==2.0.1
 numpy==1.21.2
 pandas==1.3.2
 plotly==5.2.2
 python-dateutil==2.8.2
 pytz==2021.1
+scikit-learn==0.24.2
+scipy==1.7.1
 six==1.16.0
+sklearn==0.0
 tenacity==8.0.1
+threadpoolctl==2.2.0
 Werkzeug==2.0.1
