--- a/.gitignore
+++ b/.gitignore
@@ -27,12 +27,7 @@ share/python-wheels/
 MANIFEST
 
 #Workspace
-workspace.xml
-Cash_App.iml
-misc.xml
-modules.xml
-profiles_settings.xml
-vcs.xml
+.idea
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
