--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dash-daq==0.5.0
 dash-design-kit==0.0.1
 dash-html-components==1.1.4
 dash-table==4.12.0
+dash-uploader==0.5.0
 Flask==2.0.1
 Flask-Compress==1.10.1
 future==0.18.2
